--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - My awesome website</title>
 </head>
 <body>
     This is to learn GITHUB commands
+
 </body>
 </html>
