--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <body>
     My awesome website
     <footer> 
-        Copyright allrights reserved
+        Copyright Allrights Reserved
 
     </footer>
 </body>
